--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,16 +1,56 @@
 ---
-SW-AMZ-SKLAD:
-  site: AMZ
+SW-1:
   groups:
     - cisco_ios
-  hostname: sw-amz-sklad.ventprom.com
+  hostname: 10.30.1.105
+  connection_options:
+    netmiko:
+      extras:
+        secret:
   platform: ios
   transport: ssh
+  data:
+    site: plgn
+    type: l2
+    domain: plgn.com
+    dns_servers: 10.30.8.8
+    interface_list:
+      - interface_name: vlan1
+        ipaddr: 10.30.253.11
+        netmask: 255.255.255.0
+        descr: management
+    enable: Qwerty11
+    user_info:
+      - username: sa
+        privilege: 15
+        password: Qwerty11
+    src_interface: vlan1
+    ntp_server: 10.30.24.24
 
-SW-AMZ-KUZ:
-  site: AMZ
+SW-2:
   groups:
     - cisco_ios
-  hostname: sw-amz-kuz.ventprom.com
+  hostname: 10.30.1.108
+  connection_options:
+    netmiko:
+      extras:
+        secret:
   platform: ios
   transport: ssh
+  data:
+    site: plgn
+    type: l2
+    domain: plgn.com
+    dns_servers: 10.30.8.8
+    interface_list:
+      - interface_name: vlan1    
+        ipaddr: 10.30.253.12
+        netmask: 255.255.255.0
+        descr: management
+    enable: Qwerty11
+    user_info:
+      - username: sa
+        privilege: 15
+        password: Qwerty11
+    ntp_server: 10.30.24.24
+    src_interface: vlan1
