--- a/templates/cisco_ios_ntp.template
+++ b/templates/cisco_ios_ntp.template
@@ -1,3 +1,7 @@
+! CONFIGURING NETWORK TIME PROTOCOL
+!
 ntp logging
+ntp clock-period {{host.ntp_period}}
 ntp source {{host.src_interface}}
 ntp server {{host.ntp_server}}
+!
