--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -26,7 +26,7 @@ SW-1:
         password: Qwerty11
     src_interface: vlan1
     ntp_server: 10.30.24.24
-    ntp_period: 36029458
+    clock_tz: EKB 5
 
 SW-2:
   groups:
@@ -55,4 +55,4 @@ SW-2:
         password: Qwerty11
     ntp_server: 10.30.24.24
     src_interface: vlan1
-    ntp_period: 36029458
+    clock_tz: EKB 5
