--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,6 @@
 inventory:
     plugin: SimpleInventory
     options:
-        host_file: "/Users/kcarkov/env_nornir/inventory/hosts.yml"
-        group_file: "/Users/kcarkov/env_nornir/inventory/groups.yml"
-        defaults_file: "/Users/kcarkov/env_nornir/inventory/defaults.yml"
+        host_file: "./inventory/hosts.yml"
+        group_file: "./inventory/groups.yml"
+        defaults_file: "./inventory/defaults.yml"
