--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,7 +1,7 @@
 ---
 SW-1:
   groups:
-    - cisco_ios
+    - cisco_ios_l2
   hostname: 10.30.1.105
   connection_options:
     netmiko:
@@ -12,25 +12,17 @@ SW-1:
   data:
     site: plgn
     type: l2
-    domain: plgn.com
-    dns_servers: 10.30.8.8
     interface_list:
       - interface_name: vlan1
-        ipaddr: 10.30.253.11
+        ipaddr: 10.30.252.11
         netmask: 255.255.255.0
         descr: management
-    enable: Qwerty11
-    user_info:
-      - username: sa
-        privilege: 15
-        password: Qwerty11
     src_interface: vlan1
-    ntp_server: 10.30.24.24
-    clock_tz: EKB 5
+    vty_num: 4
 
 SW-2:
   groups:
-    - cisco_ios
+    - cisco_ios_l2
   hostname: 10.30.1.108
   connection_options:
     netmiko:
@@ -39,20 +31,10 @@ SW-2:
   platform: ios
   transport: ssh
   data:
-    site: plgn
-    type: l2
-    domain: plgn.com
-    dns_servers: 10.30.8.8
     interface_list:
-      - interface_name: vlan1    
-        ipaddr: 10.30.253.12
+      - interface_name: vlan1 
+        ipaddr: 10.30.252.12
         netmask: 255.255.255.0
         descr: management
-    enable: Qwerty11
-    user_info:
-      - username: sa
-        privilege: 15
-        password: Qwerty11
-    ntp_server: 10.30.24.24
     src_interface: vlan1
-    clock_tz: EKB 5
+    vty_num: 4
