--- a/projet_fixed_ip_address/result.conf
+++ b/projet_fixed_ip_address/result.conf
@@ -1,8 +1,24 @@
-host SRV-PEV-1 {
-  hardware ethernet None;
-  fixed-address 10.30.1.101;
-}
 host SW-PLGN-1 {
   hardware ethernet None;
   fixed-address 10.30.1.105;
+}
+host SRV-PEV-1.Gig-E_4 {
+  option host-name SRV-PEV-1;
+  hardware ethernet A1:B3:C4:C5:C5:C2;
+  fixed-address 10.30.1.101;
+}
+host SRV-PEV-5.Gig-E_1 {
+  option host-name SRV-PEV-5;
+  hardware ethernet 2A:2F:0A:9F:A8:B5;
+  fixed-address 10.30.1.248;
+}
+host SRV-PEV-5.Gig-E_3 {
+  option host-name SRV-PEV-5;
+  hardware ethernet A1:B3:C4:C5:C3:C2;
+  fixed-address 10.30.1.102;
+}
+host SRV-PEV-5.Gig-E_4 {
+  option host-name SRV-PEV-5;
+  hardware ethernet 01:23:43:44:55:43;
+  fixed-address 10.30.1.102;
 }
