--- a/projet_fixed_ip_address/templates/cisco_ios_default_interface.template
+++ b/projet_fixed_ip_address/templates/cisco_ios_default_interface.template
@@ -3,4 +3,4 @@ interface {{ interface_name }}
     description DEFAULT
     switchport access vlan 99
     switchport mode access
-    no shutdown
+    shutdown
