--- a/projet_fixed_ip_address/result.conf
+++ b/projet_fixed_ip_address/result.conf
@@ -17,3 +17,8 @@ host SRV-PEV-1.Gig-E_4 {
   hardware ethernet A1:B3:C4:C5:C5:C2;
   fixed-address 10.30.1.101;
 }
+host T-IvanovII.Ethernet_0 {
+  option host-name T-IvanovII;
+  hardware ethernet 2A:2F:2A:9A:A8:B1;
+  fixed-address 10.30.3.99;
+}
