--- a/projet_fixed_ip_address/result.conf
+++ b/projet_fixed_ip_address/result.conf
@@ -17,8 +17,18 @@ host SRV-PEV-1.Gig-E_4 {
   hardware ethernet A1:B3:C4:C5:C5:C2;
   fixed-address 10.30.1.101;
 }
+host VK-1.Ethernet_0 {
+  option host-name VK-1;
+  hardware ethernet 2A:2F:0A:9F:A9:B5;
+  fixed-address 10.30.1.52;
+}
 host T-IvanovII.Ethernet_0 {
   option host-name T-IvanovII;
   hardware ethernet 2A:2F:2A:9A:A8:B1;
   fixed-address 10.30.3.99;
+}
+host Phone-Ivanov.Ethernet_0 {
+  option host-name Phone-Ivanov;
+  hardware ethernet 2A:2F:2A:9F:A8:B5;
+  fixed-address 10.30.1.1;
 }
